force-app/main/default/objects/NationalFocu__c/NationalFocu__c.object-meta.xml
<CustomObject>
    <label>NationalFocu</label>
    <pluralLabel>NationalFocus</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>NationalFocu Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>