force-app/main/default/objects/NationalFocu__c/fields/N_100__c.field-meta.xml
<CustomField>
    <fullName>N_100__c</fullName>
    <label>N 100</label>
    <type>Text</type>
    <length>255</length>
</CustomField>