force-app/main/default/objects/NationalFocu__c/fields/N_101__c.field-meta.xml
<CustomField>
    <fullName>N_101__c</fullName>
    <label>N 101</label>
    <type>Text</type>
    <length>255</length>
</CustomField>