force-app/main/default/objects/NationalFocu__c/fields/N_103__c.field-meta.xml
<CustomField>
    <fullName>N_103__c</fullName>
    <label>N 103</label>
    <type>Text</type>
    <length>255</length>
</CustomField>